--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ cover/
 *.pot
 
 # Django stuff:
-*.log
+.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -169,3 +169,13 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+.vscode/          
+.idea/            
+
+.tmp            
+.log            
+.bak
+
+test_output/
+debug/
